--- a/index.html
+++ b/index.html
@@ -5,3 +5,14 @@
     <meta property="og:title" content="Epistemology - A private open source platform for your local text AI"/>
     <meta property="og:type" content="ai"/>
     <meta property="og:url" content="https://epistemology.dev/"/>
+    <meta property="og:image" content="https://epistemology.dev/preview.png"/>
+    <meta property="og:site_name" content="Epistemology"/>
+    <meta property="og:description"
+          content="A simple and clear way of hosting llama.cpp as a private HTTP API using Rust."/>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,700;1,9..40,100;1,9..40,200;1,9..40,700&display=swap"
+      rel="stylesheet"
+    />
+    <style>
