--- a/index.html
+++ b/index.html
@@ -27,3 +27,16 @@
       h1,
       h2,
       h3 {
+        font-weight: 200;
+      }
+
+      h1 {
+        font-size: 4rem;
+        line-height: 4rem;
+        margin: 0;
+      }
+
+      h2 {
+        font-size: 2rem;
+        line-height: 2rem;
+        margin: 0;
