--- a/index.html
+++ b/index.html
@@ -40,3 +40,12 @@
         font-size: 2rem;
         line-height: 2rem;
         margin: 0;
+      }
+
+      h3 {
+        font-size: 1.2rem;
+        margin: 0;
+      }
+
+      p {
+        font-size: 1rem;
