Disable email notifications

--- a/index.html
+++ b/index.html
@@ -49,3 +49,12 @@
 
       p {
         font-size: 1rem;
+      }
+
+      b {
+        font-weight: 700;
+      }
+
+      .center {
+        text-align: center;
+      }
