--- a/index.html
+++ b/index.html
@@ -58,3 +58,12 @@
       .center {
         text-align: center;
       }
+
+      .horizontal-card-holder {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .card {
