--- a/index.html
+++ b/index.html
@@ -67,3 +67,14 @@
       }
 
       .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid black;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 10px;
+      }
+
+      .splash {
