--- a/index.html
+++ b/index.html
@@ -78,3 +78,18 @@
       }
 
       .splash {
+        background: black;
+        color: white;
+        margin: 0;
+      }
+      .splash .title {
+        padding: 2rem;
+      }
+      .splash img {
+        width: 100%;
+        max-width: 800px;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="splash">
