--- a/index.html
+++ b/index.html
@@ -96,3 +96,13 @@
         <div class="title">
             <h1>Epistemology</h1>
             <h2>
+                A private open source platform for your local text AI
+            </h2>
+        </div>
+        <img src="./epistemology.png"/>
+    </div>
+    <p>
+      Language learning models are powerful tools you should feel in control of.
+      This project was created to be a middle ground between bare bones CLI
+      usage of llama.cpp and AI interfaces that are so complex or black boxes
+      they feel untrustworthy. It offers a number of ways it aims to be private that may appeal to you:
