--- a/index.html
+++ b/index.html
@@ -106,3 +106,12 @@
       This project was created to be a middle ground between bare bones CLI
       usage of llama.cpp and AI interfaces that are so complex or black boxes
       they feel untrustworthy. It offers a number of ways it aims to be private that may appeal to you:
+
+      <ul>
+        <li>
+            Never writes your prompts out anywhere in logs or consoles
+        </li>
+        <li>
+            Runs by default on https://localhost:8080 to never have network access outside your machine
+        </li>
+        <li>
