--- a/index.html
+++ b/index.html
@@ -115,3 +115,12 @@
             Runs by default on https://localhost:8080 to never have network access outside your machine
         </li>
         <li>
+            Has extremely simple code so that you can understand and analyze every aspect
+        </li>
+        <li>
+            Has no stateful configuration or data other than what you initalize it with
+        </li>
+        <li>
+            It wraps `llama.cpp` and executes it with the most minimal exposing settings possible
+        </li>
+        <li>
