--- a/index.html
+++ b/index.html
@@ -124,3 +124,11 @@
             It wraps `llama.cpp` and executes it with the most minimal exposing settings possible
         </li>
         <li>
+            Constrain output to only what to you want it to output with AI grammers
+        </li>
+        <li>
+            Zero intentions of ever commercializing or collecting data or directing downloads to third party services
+        </li>
+        <li>
+            Open source so you can modify to your values and needs
+        </li>
