seccomp: implement SECCOMP_FILTER_FLAG_TSYNC

--- a/index.html
+++ b/index.html
@@ -132,3 +132,12 @@
         <li>
             Open source so you can modify to your values and needs
         </li>
+      </ul>
+    </p>
+    <div class="horizontal-card-holder">
+      <div class="card">
+        <h3>Local HTTP GET/POST API</h3>
+        <p>
+          Unlock seamless integration with a local HTTP API for AI <b>completion</b> and <b>embedding</b>. Build frontends with whatever tech you like backed by a simple and understandable backend. The API's clarity and simplicity ensure complete visibility into every aspect of its operation.
+        </p>
+      </div>
