[Wen Hao] - update dockerfile.

--- a/index.html
+++ b/index.html
@@ -141,3 +141,14 @@
           Unlock seamless integration with a local HTTP API for AI <b>completion</b> and <b>embedding</b>. Build frontends with whatever tech you like backed by a simple and understandable backend. The API's clarity and simplicity ensure complete visibility into every aspect of its operation.
         </p>
       </div>
+      <div class="card">
+        <h3>Bring your own static UI</h3>
+        <p>
+          Epistemology comes with a default UI for text completion, but makes it
+          easy to replace with your own personal web frontend.
+        </p>
+      </div>
+      <div class="card">
+        <h3>JSON schema support</h3>
+        <p>
+          Constraining AI outputs using grammars is very powerful, Epistemology
