--- a/index.html
+++ b/index.html
@@ -152,3 +152,17 @@
         <h3>JSON schema support</h3>
         <p>
           Constraining AI outputs using grammars is very powerful, Epistemology
+          natively supports using JSON schema files as grammars so you can get
+          useful structured output for programmatic interfaces.
+        </p>
+      </div>
+    </div>
+
+    <h3>Getting Started</h3>
+
+    <p>
+        Install <a href="https://github.com/ggerganov/llama.cpp">llama.cpp</a>. If you are using Windows, choose the appropriate zip depending on if using Nvidia Cuda or AMD OpenCL CUBlas. If you are using mac, check out how to build <a href="https://agi-sphere.com/install-llama-mac/">here</a>. If you are using other unix systems, you can build from source according to Llama.cpp's <a href="https://github.com/ggerganov/llama.cpp">website</a>.
+    </p>
+    <p>
+        Download a GGUF model such as <a href="https://huggingface.co/TheBloke/phi-2-GGUF">
+            TheBloke/phi-2-GGUF</a>. Any llama.cpp compatible GGUF you know can run on your machine will do.
