Added License File

--- a/index.html
+++ b/index.html
@@ -166,3 +166,10 @@
     <p>
         Download a GGUF model such as <a href="https://huggingface.co/TheBloke/phi-2-GGUF">
             TheBloke/phi-2-GGUF</a>. Any llama.cpp compatible GGUF you know can run on your machine will do.
+    </p>
+
+    <p>
+        Download epistemology server <a href="https://github.com/richardanaya/epistemology/releases/latest/">binaries</a> (macOS, Linux, Windows)
+        </p>
+        <p>
+        or
