Warnings are fixed

--- a/index.html
+++ b/index.html
@@ -173,3 +173,13 @@
         </p>
         <p>
         or
+        </p>
+<p>
+        Build from <source>
+
+    <pre>
+        cargo install epistemology
+    </pre>
+    </p>
+
+    <p>Run the server
