tools/power turbostat: Use $(CURDIR) instead of $(PWD) and add support for O= option in Makefile

--- a/index.html
+++ b/index.html
@@ -192,3 +192,11 @@
         Examples:
             * https://localhost:8080/api/completion?prompt=famous%20qoute:
             * curl -X POST -d "famous quote:" https://localhost:8080/api/completion
+            * curl -X POST -d "robots are good" https://localhost:8080/api/embedding
+    </pre>
+    </p>
+
+    <div class="splash">
+      <img src="./screenshot.png"/>
+      <img src="https://github.com/richardanaya/epistemology/assets/294042/069515da-9a9b-4252-b40a-52ed459850f2"/>
+  </div>
