--- a/index.html
+++ b/index.html
@@ -200,3 +200,13 @@
       <img src="./screenshot.png"/>
       <img src="https://github.com/richardanaya/epistemology/assets/294042/069515da-9a9b-4252-b40a-52ed459850f2"/>
   </div>
+<p>
+  Find more details by running
+  <pre>
+    epistemology --help
+  </pre>
+  or visiting the project page at <a href="https://github.com/richardanaya/epistemology/"">https://github.com/richardanaya/epistemology/</a>.
+</p>
+    <p>
+      Be in control of your AI.<br/>
+      Powered by Rust.<br />
