--- a/index.html
+++ b/index.html
@@ -210,3 +210,8 @@
     <p>
       Be in control of your AI.<br/>
       Powered by Rust.<br />
+      <b>MIT</b> licensed.<br />
+      <a href="https://github.com/richardanaya/epistemology/">Github</a>.<br />
+    </p>
+  </body>
+</html>
