--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,4 @@
   <head>
     <meta charset="UTF-8" />
     <title>Epistemology</title>
-    <link rel="stylesheet" h
+    <link rel="stylesheet" href="
