removed dummy file

--- a/src/index.html
+++ b/src/index.html
@@ -3,4 +3,5 @@
   <head>
     <meta charset="UTF-8" />
     <title>Epistemology</title>
-    <link rel="stylesheet" href="/index.
+    <link rel="stylesheet" href="/index.css" />
+    
