--- a/src/index.html
+++ b/src/index.html
@@ -4,4 +4,4 @@
     <meta charset="UTF-8" />
     <title>Epistemology</title>
     <link rel="stylesheet" href="/index.css" />
-    <link rel="icon
+    <link rel="icon" type="ima
