--- a/src/index.html
+++ b/src/index.html
@@ -5,3 +5,4 @@
     <title>Epistemology</title>
     <link rel="stylesheet" href="/index.css" />
     <link rel="icon" type="image/png" href="/icon.png" />
+    <meta
