HOTFIX: new Google Play app icon specification

--- a/src/index.html
+++ b/src/index.html
@@ -6,4 +6,5 @@
     <link rel="stylesheet" href="/index.css" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta
-      name="viewpo
+      name="viewport"
+      co
