--- a/src/index.html
+++ b/src/index.html
@@ -7,4 +7,4 @@
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta
       name="viewport"
-      content="width=device-width, initial-sc
+      content="width=device-width, initial-scale=1.0,
