--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,5 @@
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
   </head>
-  <bod
+  <body>
+   
