--- a/src/index.html
+++ b/src/index.html
@@ -12,4 +12,5 @@
   </head>
   <body>
     <epistemology-app></epistemology-app>
-    <script type="module" src="./app.js"></script
+    <script type="module" src="./app.js"></script>
+  </bod
