--- a/src/index.html
+++ b/src/index.html
@@ -13,4 +13,5 @@
   <body>
     <epistemology-app></epistemology-app>
     <script type="module" src="./app.js"></script>
-  </bod
+  </body>
+</html>
